--- a/demo_css/w_schools/asset/css/style.css
+++ b/demo_css/w_schools/asset/css/style.css
@@ -147,8 +147,8 @@ html {
 #slider{
     position: relative;
     margin-top: 46px ;
-    padding-top: 50%;
-    background:url("../anh/ny.jpg") top center / cover no-repeat;
+    /*padding-top: 50%;*/
+    /*!*background:url("../anh/ny.jpg") top center / cover no-repeat;*!*/
 }
 
 #slider .text-content{
