--- a/ss6_css_cascading_style_stylesheet/bai_tap/tao_trang_doc_truyen_ngan/asset/tao_trang_doc_truyen_ngan.css
+++ b/ss6_css_cascading_style_stylesheet/bai_tap/tao_trang_doc_truyen_ngan/asset/tao_trang_doc_truyen_ngan.css
@@ -92,8 +92,8 @@
 #slider {
     position: relative;
     margin-top: 46px;
-    padding-top: 50%;
-    background: url("./anh/bia3.jpg") top center / cover no-repeat;
+    /*padding-top: 50%;*/
+    /*background: url("./anh/bia3.jpg") top center / cover no-repeat;*/
 }
 
 #slider .text-content {
