--- a/ss7_thiet_ke_bo_cuc_web/bai_tap/tao_layuot_voi_rwd/tao_layuot_voi_rwd.css
+++ b/ss7_thiet_ke_bo_cuc_web/bai_tap/tao_layuot_voi_rwd/tao_layuot_voi_rwd.css
@@ -10,7 +10,7 @@
     /*height: 46px;*/
     background-color: #000;
     z-index: 1;
-    top: 0px;
+    top: 0;
 }
 .heading {
     display: inline-block;
@@ -78,18 +78,8 @@
     border-radius: 10px;
 }
 
-/*.clearfix:before, .clearfix:after {*/
-/*    content: "";*/
-/*    display: table;*/
-/*}*/
-/*.clearfix:after {*/
-/*    clear: both;*/
-/*}*/
-/*.clearfix {*/
-/*    zoom: 1;*/
-/*}*/
+
 .footer {
-    /*margin-top: 500px;*/
     width: 100%;
     height: 100px;
     background: #4f5050;
@@ -97,13 +87,15 @@
     text-align: center;
 }
 
+.welcome {
+    border-bottom: 1px solid #000000;
+}
+
 .welcome , .test{
-    height: 300px;
-    border: 1px solid #000000;
+    height: 250px;
     margin: 2px 2px;
 }
 .content > .between {
-    margin-left: 20%;
-    margin-right: 20%;
-    border-bottom: 5px solid #000000;
+    width: 60%;
+    float: left;
 }
